--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/svg+xml" href="/title.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3fret store</title>
+    <meta name="description" content="Buy TikTok coins and digital services easily and securely from 3Fret Store. Fast delivery and trusted support." />
+    <meta name="keywords" content="tiktok coins, digital services, 3fret store, buy coins online, coins, coins store" />
   </head>
   <body>
     <div id="root"></div>
