--- a/index.html
+++ b/index.html
@@ -1,6 +1,12 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link
+      rel="preload"
+      href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700;900&display=swap"
+      as="style"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/title.jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
