ADDING VACION IMG

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     />
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/title.jpg" />
+    <link rel="icon" type="image/png" sizes="48x48" href="/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3fret store</title>
     <meta name="description" content="Buy TikTok coins and digital services easily and securely from 3Fret Store. Fast delivery and trusted support." />
