editing in calculator component far calculating 2

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3fret store</title>
     <meta name="description" content="Buy TikTok coins and digital services easily and securely from 3Fret Store. Fast delivery and trusted support." />
-    <meta name="keywords" content="tiktok coins, digital services, 3fret store, buy coins online, coins, coins store" />
+    <meta name="keywords" content="tiktok coins, digital services, 3fret store, buy coins online, coins, coins store الشيخ عفريت , عفريت , شحن عملات, متجر , متجر عفريت ,عفريت عملات , ستور , ستور عفريت , ستور الشيخ عفريت , عملات تيكتوك عفريت " />
   </head>
   <body>
     <div id="root"></div>
