--- a/index.html
+++ b/index.html
@@ -13,8 +13,26 @@
     <link rel="apple-touch-icon" type="image/png" sizes="48x48" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>3fret store</title>
-    <meta name="description" content="Buy TikTok coins and digital services easily and securely from 3Fret Store. Fast delivery and trusted support." />
-    <meta name="keywords" content="tiktok coins, digital services, 3fret store, buy coins online, coins, coins store الشيخ عفريت , عفريت , شحن عملات, متجر , متجر عفريت ,عفريت عملات , ستور , ستور عفريت , ستور الشيخ عفريت , عملات تيكتوك عفريت " />
+    <meta name="description" content="
+    متجر الشيخ عفريت لشحن وشراء عملات تيك توك بسرعة وأمان.
+    أفضل أسعار TikTok Coins في مصر مع دعم PayPal وVodafone Cash وBinance.
+    ">
+    <meta name="keywords" content="
+    tiktok coins,
+    buy tiktok coins,
+    tiktok coins store,
+    buy coins online,
+    digital services store,
+    3fret store,
+    متجر عملات تيك توك,
+    شحن عملات تيك توك,
+    شراء عملات تيك توك,
+    متجر الشيخ عفريت,
+    ستور عفريت,
+    عفريت عملات,
+    شحن عملات,
+    متجر خدمات رقمية
+    ">
   </head>
   <body>
     <div id="root"></div>
