editing meta and improving SEO

--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon.ico" />
     <link rel="apple-touch-icon" type="image/png" sizes="48x48" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>3fret store</title>
-    <meta name="description" content="
-    متجر الشيخ عفريت لشحن وشراء عملات تيك توك بسرعة وأمان.
-    أفضل أسعار TikTok Coins في مصر مع دعم PayPal وVodafone Cash وBinance.
-    ">
+    <title>شحن عملات تيك توك في مصر | متجر الشيخ عفريت 3Fret</title>
+    <meta name="description" content="متجر الشيخ عفريت (3Fret) لشحن وشراء عملات تيك توك بسرعة وأمان في مصر. حساب تلقائي للسعر والدفع عبر فودافون كاش وInstaPay وPayPal وBinance." />
     <meta name="keywords" content="
     tiktok coins,
     buy tiktok coins,
@@ -33,6 +30,13 @@
     شحن عملات,
     متجر خدمات رقمية
     ">
+    <meta property="og:title" content="شحن عملات تيك توك | متجر الشيخ عفريت 3Fret" />
+    <meta property="og:description" content="شحن وشراء TikTok Coins بسرعة وأمان في مصر. Vodafone Cash / InstaPay / PayPal / Binance." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="/og.jpg" />
+     ؤ<link rel="canonical" href="https://YOUR-DOMAIN.COM/" />
+    <meta name="robots" content="index, follow" />
+
   </head>
   <body>
     <div id="root"></div>
