editing meta and improving SEO AND SECURTY

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
     <link rel="icon" type="image/png" sizes="48x48" href="/favicon.ico" />
     <link rel="apple-touch-icon" type="image/png" sizes="48x48" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <title>شحن عملات تيك توك في مصر | متجر الشيخ عفريت 3Fret</title>
     <meta name="description" content="متجر الشيخ عفريت (3Fret) لشحن وشراء عملات تيك توك بسرعة وأمان في مصر. حساب تلقائي للسعر والدفع عبر فودافون كاش وInstaPay وPayPal وBinance." />
+    <link rel="canonical" href="https://3fretstore.com/" />
+
     <meta name="keywords" content="
     tiktok coins,
     buy tiktok coins,
@@ -30,12 +33,28 @@
     شحن عملات,
     متجر خدمات رقمية
     ">
+
+    <!-- Open Graph / Twitter -->
     <meta property="og:title" content="شحن عملات تيك توك | متجر الشيخ عفريت 3Fret" />
     <meta property="og:description" content="شحن وشراء TikTok Coins بسرعة وأمان في مصر. Vodafone Cash / InstaPay / PayPal / Binance." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/og.jpg" />
-     ؤ<link rel="canonical" href="https://YOUR-DOMAIN.COM/" />
-    <meta name="robots" content="index, follow" />
+    <meta property="og:image" content="https://3fretstore.com/og.jpg" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
+
+    <!-- Structured data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Store",
+      "name": "متجر الشيخ عفريت - 3Fret Store",
+      "url": "https://3fretstore.com/",
+      "description": "متجر لشحن وشراء عملات تيك توك بسرعة وأمان في مصر.",
+      "paymentAccepted": "PayPal, Vodafone Cash, Binance, InstaPay",
+      "sameAs": []
+    }
+    </script>
 
   </head>
   <body>
